@@ -11,6 +11,7 @@ Version 1.4.10 - CVS
   - Fix rare bug in forwarding as attachment from some search results.
   - Add warning about magic_quotes_* in configtest.
   - Unify accepted versions for imap_server_type and set_defaults (#1629722).
+  - Improve SMTP error message.
 
 Version 1.4.9a - 3 December 2006
 --------------------------------
